--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Barcode.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\xyz\\barcode.jar
+file.reference.prompt.jar=prompt.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.barcode.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.prompt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
