--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/Barcode.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\xyz\\barcode.jar
+file.reference.itextpdf-5.3.5.jar=IText\\itextpdf-5.3.5.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\MySQL\\Connector (JDBC)\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
 file.reference.prompt.jar=prompt.jar
 includes=**
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.barcode.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.prompt.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.itextpdf-5.3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
