Multiple codes generate - Complete

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,13 @@ dist.jar=${dist.dir}/Barcode.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\xyz\\barcode.jar
+file.reference.itext7-7.0.2.zip=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-7.0.2.zip
+file.reference.itext7-io-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-io-7.0.2.jar
+file.reference.itext7-kernel-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-kernel-7.0.2.jar
+file.reference.itext7-layout-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-layout-7.0.2.jar
+file.reference.itext7-pdfa-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-pdfa-7.0.2.jar
+file.reference.itext7-pdftest-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-pdftest-7.0.2.jar
+file.reference.itext7-sign-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-sign-7.0.2.jar
 file.reference.itextpdf-5.3.5.jar=IText\\itextpdf-5.3.5.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\MySQL\\Connector (JDBC)\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
 file.reference.prompt.jar=prompt.jar
@@ -38,7 +45,14 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.prompt.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${file.reference.itextpdf-5.3.5.jar}
+    ${file.reference.itextpdf-5.3.5.jar}:\
+    ${file.reference.itext7-7.0.2.zip}:\
+    ${file.reference.itext7-io-7.0.2.jar}:\
+    ${file.reference.itext7-kernel-7.0.2.jar}:\
+    ${file.reference.itext7-layout-7.0.2.jar}:\
+    ${file.reference.itext7-pdfa-7.0.2.jar}:\
+    ${file.reference.itext7-pdftest-7.0.2.jar}:\
+    ${file.reference.itext7-sign-7.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
