Open PDF + print

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.itext7-sign-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansPr
 file.reference.itextpdf-5.3.5.jar=IText\\itextpdf-5.3.5.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\MySQL\\Connector (JDBC)\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
 file.reference.prompt.jar=prompt.jar
+file.reference.sqlite-jdbc-3.6.20.1.jar=mysql-connector-java-5.1.42\\SQLite\\sqlite-jdbc-3.6.20.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.itext7-layout-7.0.2.jar}:\
     ${file.reference.itext7-pdfa-7.0.2.jar}:\
     ${file.reference.itext7-pdftest-7.0.2.jar}:\
-    ${file.reference.itext7-sign-7.0.2.jar}
+    ${file.reference.itext7-sign-7.0.2.jar}:\
+    ${file.reference.sqlite-jdbc-3.6.20.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
