Printing complete - Rotation problem

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.itext7-pdftest-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBean
 file.reference.itext7-sign-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-sign-7.0.2.jar
 file.reference.itextpdf-5.3.5.jar=IText\\itextpdf-5.3.5.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\MySQL\\Connector (JDBC)\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
+file.reference.pdfbox-app-2.0.6.jar=mysql-connector-java-5.1.42\\pdfbox-app-2.0.6.jar
 file.reference.prompt.jar=prompt.jar
 file.reference.sqlite-jdbc-3.6.20.1.jar=mysql-connector-java-5.1.42\\SQLite\\sqlite-jdbc-3.6.20.1.jar
 file.reference.thumbnailator-0.4.2-all.jar=mysql-connector-java-5.1.42\\thumbnailator-0.4.2-all.jar
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.itext7-sign-7.0.2.jar}:\
     ${file.reference.sqlite-jdbc-3.6.20.1.jar}:\
     ${file.reference.thumbnailator-0.4.2-all.jar}:\
-    ${file.reference.barcode.jar-1}
+    ${file.reference.barcode.jar-1}:\
+    ${file.reference.pdfbox-app-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
