--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\xyz\\barcode.jar
 file.reference.barcode.jar-1=C:\\Users\\Spongebob\\Desktop\\barcode\\WEB-INF\\lib\\barcode.jar
+file.reference.com.lowagie.text-2.1.7.jar=D:\\Jar\\com.lowagie.text-2.1.7.jar
 file.reference.itext7-7.0.2.zip=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-7.0.2.zip
 file.reference.itext7-io-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-io-7.0.2.jar
 file.reference.itext7-kernel-7.0.2.jar=C:\\Users\\Spongebob\\Documents\\NetBeansProjects\\iText\\itext7-kernel-7.0.2.jar
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.sqlite-jdbc-3.6.20.1.jar}:\
     ${file.reference.thumbnailator-0.4.2-all.jar}:\
     ${file.reference.barcode.jar-1}:\
-    ${file.reference.pdfbox-app-2.0.6.jar}
+    ${file.reference.pdfbox-app-2.0.6.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
