--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\barcode\\WEB-INF\\lib\\barcode.jar
-user.properties.file=C:\\Users\\Spongebob\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\y2k\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
