--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,13 @@
 compile.on.save=true
-file.reference.barcode.jar=C:\\Users\\Spongebob\\Desktop\\barcode\\WEB-INF\\lib\\barcode.jar
+file.reference.barcode.jar=D:\\lib\\barcode.jar
+file.reference.barcode.jar-1=D:\\lib\\barcode.jar
+file.reference.com.lowagie.text-2.1.7.jar=D:\\lib\\com.lowagie.text-2.1.7.jar
+file.reference.itext7-7.0.2.zip=D:\\lib\\itext7-7.0.2.zip
+file.reference.itext7-io-7.0.2.jar=D:\\lib\\itext7-io-7.0.2.jar
+file.reference.itext7-kernel-7.0.2.jar=D:\\lib\\itext7-kernel-7.0.2.jar
+file.reference.itext7-layout-7.0.2.jar=D:\\lib\\itext7-layout-7.0.2.jar
+file.reference.itext7-pdfa-7.0.2.jar=D:\\lib\\itext7-pdfa-7.0.2.jar
+file.reference.itext7-pdftest-7.0.2.jar=D:\\lib\\itext7-pdftest-7.0.2.jar
+file.reference.itext7-sign-7.0.2.jar=D:\\lib\\itext7-sign-7.0.2.jar
+file.reference.mysql-connector-java-5.1.42-bin.jar=D:\\lib\\mysql-connector-java-5.1.42-bin.jar
 user.properties.file=C:\\Users\\Spongebob\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
